--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "eu-europe-1"
+  region: "eu-central-1"
   app: "docker-react"
   env: "Dockerreact-env"
   bucket_name: "elasticbeanstalk-eu-central-1-208863507377"
