--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-west-2"
-  app: "docker-react"
+  app: "Docker-react"
   env: "Dockerreact-env"
   bucket_name: "elasticbeanstalk-us-west-2-208863507377"
   bucket_path: "docker-react"
